# OpenConnectCompanion

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  fit_parser.rs  lib.rs
src/components/: ActivityChart.tsx  ContributionCalendar.tsx  Dashboard.tsx  ElevationProfile.tsx  HRZonesCard.tsx  Header.tsx  HeatmapView.tsx  PersonalRecordsCard.tsx  RecoveryScoreCard.tsx  SegmentAnalysis.tsx  SettingsModal.tsx  StatCards.tsx  ToastContainer.tsx  TrainingLoadCard.tsx  WeeklyChart.tsx  WorkoutCharts.tsx  WorkoutList.tsx  WorkoutMap.tsx  WorkoutModal.tsx
src/stores/: settingsStore.ts  themeStore.ts  toastStore.ts  workoutStore.ts
