[package]
name = "openconnect-companion-tauri"
version = "0.2.0"
description = "Open-source fitness data management tool"
authors = ["OpenConnectCompanion"]
license = "GPL-3.0"
repository = "https://github.com/kuboha/OpenConnectCompanion-Tauri"
edition = "2021"
rust-version = "1.77.2"
default-run = "openconnect-companion-tauri"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# FIT file parsing
fitparser = "0.7"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
